# sigil

./: .gitignore  CAPABILITIES.md  CLAUDE.md  Cargo.toml  DEBUG_RUN_STATE.md  HANDOFF_STAGE_7_FINISHING.md  LAMBDA_OF_STATE_DEVIATIONS.md  LAMBDA_OF_STATE_PROGRESS.md  LICENSE  Makefile  PLAN_A1_DEVIATIONS.md  PLAN_A1_PROGRESS.md  PLAN_A2_DEVIATIONS.md  PLAN_A2_PROGRESS.md  PLAN_A3_DEVIATIONS.md  PLAN_A3_PROGRESS.md  PLAN_A_DEVIATIONS.md  PLAN_A_PROGRESS.md  PLAN_B_DEVIATIONS.md  PLAN_B_PRIME_DEVIATIONS.md  PLAN_B_PRIME_PROGRESS.md  PLAN_B_PROGRESS.md  PLAN_C_DEVIATIONS.md  PLAN_C_PROGRESS.md  PLAN_D_DEVIATIONS.md  PLAN_D_PROGRESS.md  PLAN_E2_PROGRESS.md  QUESTIONS.md  README.md  SIGIL_FOR_LLMS.md  V2_STATUS.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  throughput-report.yml
abi/: Cargo.toml
abi/src/: effect.rs  lib.rs  stackmap.rs  tag.rs
comp/: README.md  prompts.md
comp/contexts/: go.md  python.md  rust.md  sigil.md
comp/log/: comparison-log.md
comp/scripts/: clusters.py  compare.py  compare.sh  dashboard.py  eval-go.sh  eval-python.sh  eval-rust.sh  eval-sigil.sh
comp/tests/: conftest.py  test_clusters.py  test_compare_tier.py  test_dashboard.py
compiler/: Cargo.toml  build.rs
compiler/docs/: cps-call-as-tail-diagnosis.md  cps-call-as-tail-runtime-fix-spike.md  cps-refinement-baseline.md  cranelift-stackmap-spike.md  lambda-of-state-anomaly.md  multi-shot-tail-anomaly.md  plan-e2-phase-2-static-descriptor-table.md  plan-e2-phase-2-throughput.md  plan-e2-phase-3-alloc-overhead-attribution.md  plan-e2-phase-3-alloc-trampoline-elision.md  plan-e2-phase-3-gc-time-followup.md  plan-e2-phase-3-throughput.md  profile-symbol-table.md  stackmap-v1.md  stdlib-fallible-audit.md
compiler/examples/: cranelift_stackmap_spike.rs
compiler/src/: ast.rs  cli.rs  closure_convert.rs  codegen.rs  color.rs  cps.rs  discharge.rs  elaborate.rs  imports.rs  layout.rs  lexer.rs  lib.rs  link.rs  main.rs  monomorphize.rs  parser.rs  pipeline.rs  resolve.rs  stdlib_embed.rs  stdlib_index.rs  symtab.rs  typecheck.rs
compiler/src/errors/: catalog.rs  diagnostic.rs  mod.rs
compiler/tests/: cranelift_stackmap_spike.rs  e2e.rs  stackmap_v1_round_trip.rs
docs/: CNAME  _config.yml  capabilities.md  for-llms.md  index.md  language.md  language.raw.md  memory-profile.md  stdlib.raw.md
docs/superpowers/plans/: 2026-05-17-first-pass-success-dashboard.md  2026-05-22-arith-trap-not-effect.md  2026-06-03-record-field-access.md  2026-06-03-std-path.md
docs/superpowers/specs/: 2026-05-17-first-pass-success-dashboard-design.md  2026-06-03-record-field-access-design.md  2026-06-03-std-path-design.md  2026-06-16-cross-file-imports-design.md  2026-06-18-growable-continuation-stack-design.md  2026-06-18-json-float-design.md  2026-06-20-surl-stdlib-requirements-design.md  2026-06-23-static-link-boehm-gc.md
examples/: arith.sigil  catch.sigil  choose.sigil  choose_demo.sigil  deep_sync_call_chain.sigil  descriptor_cache_stress.sigil  div_by_zero.sigil  div_recover.sigil  fib_cps_perf.sigil  fib_cps_shallow_perf.sigil  fib_perf.sigil  fibonacci.sigil  generic_map.sigil  hello.sigil  higher_order.sigil  interpreter.sigil  json.sigil  json_float_test.sigil  multishot_perf.sigil  multishot_stress.sigil  nested_effects.sigil  net_test.sigil  net_wrapper_test.sigil  option_demo.sigil  path_demo.sigil  state.sigil  sudoku.sigil  tree.sigil  tree_stress_repeat.sigil  tree_stress_repeat_large.sigil  url_demo.sigil
examples/multi_hello/: helper.sigil  main.sigil
header-constants/: Cargo.toml
header-constants/src/: lib.rs
runtime/: Cargo.toml  README.md  build.rs
runtime/docs/: boehm-per-thread-roots-spike.md  boehm-precise-spike.md
runtime/src/: arena.rs  arith.rs  array.rs  byte.rs  byte_array.rs  char.rs  clock.rs  continuation.rs  counters.rs  effect_helpers.rs  env.rs  float.rs  fs.rs  gc.rs  handlers.rs  header.rs  int64.rs  io.rs  lib.rs  mem.rs  net.rs  panic.rs  process.rs  random.rs  refs.rs  stackmap.rs  stackmap_xcheck.rs  string.rs  string_builder.rs  test_support.rs  value.rs
runtime/src/gc/: descriptor.rs  threads.rs
runtime/src/profile/: alloc.rs  cpu.rs  folded.rs  mod.rs  output.rs  pprof.rs  resolve.rs  ring.rs  sample.rs  sys.rs  unwind.rs
runtime/tests/: boehm_per_thread_roots_spike.rs  boehm_precise_spike.rs
scripts/: build-static-boehm.sh  check-commit-messages.sh  check-docs-sync.sh  check-no-interior-pointers.sh  diff-throughput.py  gen-stdlib-doc.py  measure-throughput.sh  migrate-to-qualified-imports.mjs  peak-rss.sh  plan-b-invariants.sh  pod-verify.sh  pre-checkpoint-cadence-patch.diff  reproducibility.sh  smoke.sh  stdlib-exports.json  sync-docs.sh  validate-spec.sh  validate_spec.py
spec/: language.md  validation-log.md  validation-prompts.md
std/: array.sigil  byte_array.sigil  char.sigil  choose.sigil  clock.sigil  env.sigil  float.sigil  format.sigil  fs.sigil  http.sigil  int.sigil  int64.sigil  io.sigil  json.sigil  list.sigil  map.sigil  mem.sigil  mut_array.sigil  mut_byte_array.sigil  net.sigil  option.sigil  ordering.sigil  pair.sigil  panic.sigil  path.sigil  process.sigil  raise.sigil  random.sigil  result.sigil  set.sigil  state.sigil  string.sigil  string_builder.sigil  url.sigil
