[workspace]
resolver = "2"
members = ["compiler", "header-constants", "runtime"]

[workspace.package]
edition = "2021"
rust-version = "1.95.0"
license = "MIT"

[workspace.dependencies]
cranelift = "=0.131.0"
cranelift-module = "=0.131.0"
cranelift-object = "=0.131.0"
target-lexicon = "=0.13.5"
include_dir = "=0.7.4"
insta = "=1.47.2"

[profile.dev]
debug = 1              # line tables only; avoids full-DWARF link-time memory blowup
incremental = false    # incremental caches bloat memory and occasionally corrupt
codegen-units = 256    # many small units → smaller per-unit peak memory

[profile.release]
debug = 0
codegen-units = 16     # balance between optimization quality and link memory
lto = false            # LTO is a v2+ consideration; off for now
