[package]
name = "sigil-compiler"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lib]
name = "sigil_compiler"
path = "src/lib.rs"

[[bin]]
name = "sigil"
path = "src/main.rs"

[dependencies]
cranelift = { workspace = true }
cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
target-lexicon = { workspace = true }
include_dir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
# Dev-dep on the runtime so `cargo test -p sigil-compiler` builds
# `target/debug/libsigil_runtime.a`, which `link.rs` links against
# during the end-to-end hello-world test.
sigil-runtime = { path = "../runtime" }
