[package]
name = "sigil-compiler"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lib]
name = "sigil_compiler"
path = "src/lib.rs"

[[bin]]
name = "sigil"
path = "src/main.rs"

[dependencies]
cranelift = { workspace = true }
cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
target-lexicon = { workspace = true }
include_dir = { workspace = true }
# Shared ABI constants for the 8-byte object header. Codegen emits
# header immediates inline at each allocation site; this dep replaces
# the duplicated bit-layout formula that lived in `codegen.rs` as a
# parallel copy of `runtime::header`. PR #7 review item 3.
sigil-header-constants = { path = "../header-constants" }

[dev-dependencies]
insta = { workspace = true }
# Dev-dep on the runtime so `cargo test -p sigil-compiler` builds
# `target/debug/libsigil_runtime.a`, which `link.rs` links against
# during the end-to-end hello-world test.
sigil-runtime = { path = "../runtime" }
