[package]
name = "sigil-compiler"
version = "1.0.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lib]
name = "sigil_compiler"
path = "src/lib.rs"

[[bin]]
name = "sigil"
path = "src/main.rs"

[dependencies]
cranelift = { workspace = true }
cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
target-lexicon = { workspace = true }
include_dir = { workspace = true }
# Shared ABI constants for the 8-byte object header. Codegen emits
# header immediates inline at each allocation site; this dep replaces
# the duplicated bit-layout formula that lived in `codegen.rs` as a
# parallel copy of `runtime::header`. PR #7 review item 3.
sigil-header-constants = { path = "../header-constants" }
# Stackmap wire-format constants (and forward-compatible v1 record
# layout) plus tagged-Value bit masks. Plan B Stage 4.5.5 extracted
# these from `compiler/src/codegen.rs` (where they were duplicated with
# `runtime/src/stackmap.rs`) and `runtime/src/value.rs` (where codegen
# referenced the bit layout via inlined literals).
sigil-abi = { path = "../abi" }

[dev-dependencies]
insta = { workspace = true }
# Dev-dep on the runtime so `cargo test -p sigil-compiler` builds
# `target/debug/libsigil_runtime.a`, which `link.rs` links against
# during the end-to-end hello-world test.
sigil-runtime = { path = "../runtime" }
# TLS fixtures for e2e tests
rustls = "0.23"
rcgen = "0.13"
