[package]
name = "sigil-runtime"
version = "1.0.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = "Apache-2.0 WITH LLVM-exception"

[lib]
name = "sigil_runtime"
crate-type = ["staticlib", "rlib"]

[dependencies]
# Shared ABI constants for the 8-byte object header. PR #7 review
# item 3 — previously the runtime was the "single source of truth"
# while codegen replicated the bit-layout inline; that claim is now
# correct because both crates consume from this shared crate.
sigil-header-constants = { path = "../header-constants" }
# Plan B Stage 4.5.5: shared stackmap wire format + tagged-Value bit
# layout. `runtime::stackmap` and `runtime::value` re-export from this
# crate so the public surface (`sigil_runtime::stackmap::STACKMAP_*`,
# `sigil_runtime::value::TAG_*`) stays backward-compatible.
sigil-abi = { path = "../abi" }
